--- a/apigw/src/main/resources/application.yml
+++ b/apigw/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     name: api-gateway
   zipkin:
     base-url: http://localhost:9411
+  rabbitmq:
+    addresses: localhost:5672
   cloud:
     gateway:
       routes:
