--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -24,6 +24,8 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: true
     register-with-eureka: true
+    enabled: false
+
 rabbitmq:
   exchanges:
     internal: internal.exchange
